orde, cart and payment routes added

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URL=mongodb+srv://pasta:mymumzgangsta@cluster0.kvabqh5.mongodb.net/shop?re
 PORT=5000
 PASSWORD_KEY=shopapikey
 JWT_KEY=shopapijwtkey
+PAYSTACK_SECRET_KEY=sk_test_de50aab092fd75122b29ced7301c9137fa57b815
